--- a/_posts/0000-01-02-bhumika7.md
+++ b/_posts/0000-01-02-bhumika7.md
@@ -4,4 +4,6 @@ title: "Welcome to our second slide!"
 ---
 bas yeh karlo phele
 https://miro.medium.com/max/4098/1*kFGNQmtjn9Ftw4-MOIgL3A.jpeg
+hello
+
 Use the left arrow to go back!
